jerry-core/parser/js/new-parser/tests/js/debugger-statement-with-expression.js.expected
Parse error 'Invalid character.' at line: 3 col: 10
