jerry-core/parser/js/new-parser/tests/js/debugger-statement-with-expression.js
/* This test contains debugger statement parser negative test. */

debugger 0
